// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo - Leading Story should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    display: block;
    width: initial;
    padding: initial;
    padding: 0;
    width: 100%;
    grid-template-columns: repeat(6, 1fr);
    grid-column-end: span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) {
    .emotion-2 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
    }
  }
}

@media (max-width: 62.9375rem) {
  .emotion-2>time {
    padding-bottom: 0.5rem;
  }
}

.emotion-4 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    width: 66.67%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    width: initial;
    padding: 0;
    grid-template-columns: repeat(6, 1fr);
    grid-column-end: span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-10 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-12 {
  position: relative;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          class="emotion-6 emotion-7"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
    <div
      class="emotion-10 emotion-11"
      dir="ltr"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Leading Story should render with Media Indicator correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: 33.33%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    display: block;
    width: initial;
    padding: initial;
    padding: 0;
    width: 100%;
    grid-template-columns: repeat(6, 1fr);
    grid-column-end: span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-2 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) {
    .emotion-2 {
      grid-template-columns: repeat(2, 1fr);
      grid-column-end: span 2;
    }
  }
}

@media (max-width: 62.9375rem) {
  .emotion-2>time {
    padding-bottom: 0.5rem;
  }
}

.emotion-4 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.125rem;
  line-height: 1.375rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-4 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-4 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

.emotion-6 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-6:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-6:hover,
.emotion-6:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-6:visited {
  color: #6E6E73;
}

.emotion-8 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-8 {
    display: none;
    visibility: hidden;
  }
}

.emotion-10 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-10 {
    padding-right: 0.5rem;
    width: 50%;
  }
}

@media (min-width: 63rem) {
  .emotion-10 {
    width: 66.67%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-10 {
    width: initial;
    padding: 0;
    grid-template-columns: repeat(6, 1fr);
    grid-column-end: span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-10 {
      grid-template-columns: repeat(3, 1fr);
      grid-column-end: span 3;
    }
  }

  @media (min-width: 63rem) {
    .emotion-10 {
      grid-template-columns: repeat(4, 1fr);
      grid-column-end: span 4;
    }
  }
}

.emotion-12 {
  position: relative;
}

.emotion-14 {
  position: absolute;
  bottom: 0;
}

.emotion-14>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.emotion-16 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-20 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-22 {
  padding: 0 0.25rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <h3
        class="emotion-4 emotion-5"
      >
        <a
          class="emotion-6 emotion-7"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-8 emotion-9"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
    <div
      class="emotion-10 emotion-11"
      dir="ltr"
    >
      <div
        class="emotion-12 emotion-13"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-14 emotion-15"
        >
          <div
            aria-hidden="true"
            class="emotion-16 emotion-17"
            data-e2e="media-indicator"
            dir="ltr"
          >
            <div
              class="emotion-18 emotion-19"
            >
              <svg
                aria-hidden="true"
                class="emotion-20 emotion-21"
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M.5.6h12v12H.5z"
                  />
                  <path
                    d="M2.144.96v11.28l8.712-5.64z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <time
                class="emotion-22 emotion-23"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    width: 50%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      grid-column: 4/span 3;
    }
  }

  @media (min-width: 80rem) {
    .emotion-6 {
      grid-column: 7/span 6;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with Media Indicator correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  position: absolute;
  bottom: 0;
}

.emotion-6>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.emotion-8 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-12 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-14 {
  padding: 0 0.25rem;
}

.emotion-16 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-16 {
    width: 50%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-16 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-16 {
      grid-column: 4/span 3;
    }
  }

  @media (min-width: 80rem) {
    .emotion-16 {
      grid-column: 7/span 6;
    }
  }
}

.emotion-18 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-20 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-20:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-20:hover,
.emotion-20:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20:visited {
  color: #6E6E73;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-22 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            aria-hidden="true"
            class="emotion-8 emotion-9"
            data-e2e="media-indicator"
            dir="ltr"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <svg
                aria-hidden="true"
                class="emotion-12 emotion-13"
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M.5.6h12v12H.5z"
                  />
                  <path
                    d="M2.144.96v11.28l8.712-5.64z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <time
                class="emotion-14 emotion-15"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-16 emotion-17"
      dir="ltr"
    >
      <h3
        class="emotion-18 emotion-19"
      >
        <a
          class="emotion-20 emotion-21"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-22 emotion-23"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with multiple Index Alsos correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    width: 50%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      grid-column: 4/span 3;
    }
  }

  @media (min-width: 80rem) {
    .emotion-6 {
      grid-column: 7/span 6;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-16 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.emotion-19 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-21 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-21:hover,
.emotion-21:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-21:visited {
  color: #6E6E73;
}

.emotion-21 svg {
  margin: 0;
}

.emotion-23 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-23 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-27 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
      <div
        class="emotion-14 emotion-15"
        data-e2e="index-alsos"
      >
        <h4
          class="emotion-16"
        >
          Related content
        </h4>
        <ul
          class="emotion-17 emotion-18"
          role="list"
        >
          <li
            class="emotion-19 emotion-20"
            role="listitem"
          >
            <a
              aria-labelledby="IndexAlsosLink-hausalabarai48916590"
              class="focusIndicatorDisplayInlineBlock emotion-21 emotion-22"
              href="/hausa/labarai-48916590"
            >
              <div
                aria-hidden="true"
                class="emotion-23 emotion-24"
                data-e2e="media-indicator"
                dir="ltr"
              >
                <div
                  class="emotion-25 emotion-26"
                >
                  <svg
                    aria-hidden="true"
                    class="emotion-27 emotion-28"
                    focusable="false"
                    height="12"
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <path
                        d="M.5.6h12v12H.5z"
                      />
                      <path
                        d="M2.144.96v11.28l8.712-5.64z"
                        fill="currentColor"
                      />
                    </g>
                  </svg>
                </div>
              </div>
              <span
                id="IndexAlsosLink-hausalabarai48916590"
                role="text"
              >
                <span
                  class="emotion-16"
                >
                  video, 
                </span>
                <span>
                  APC ba ta isa ta kore ni ba – Buba Galadima
                </span>
              </span>
            </a>
          </li>
          <li
            class="emotion-19 emotion-20"
            role="listitem"
          >
            <a
              class="focusIndicatorDisplayInlineBlock emotion-21 emotion-22"
              href="/hausa/labarai-42837051"
            >
              <span>
                Yaushe Obasanjo ya fara yi wa shugabannin kasa baki?
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo - Top Story should render with one Index Also correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-0 {
      grid-template-columns: repeat(12, 1fr);
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  margin-bottom: 0.5rem;
  width: 100%;
}

@media (min-width: 37.5rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
    margin-bottom: 0;
  }
}

@media (min-width: 63rem) {
  .emotion-2 {
    width: calc(50% - 0.5rem);
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) and (max-width: 79.9375rem) {
    .emotion-2 {
      grid-column: 1/span 3;
    }
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    width: 50%;
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    width: 50%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 1/span 6;
  }

  @media (min-width: 37.5rem) {
    .emotion-6 {
      grid-column: 4/span 3;
    }
  }

  @media (min-width: 80rem) {
    .emotion-6 {
      grid-column: 7/span 6;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

.emotion-14 {
  position: relative;
  z-index: 2;
  padding: 1rem 0 0;
}

.emotion-16 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-17 {
  border-top: 1px solid #F2F2F2;
  padding: 0.5rem 0;
}

.emotion-19 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-19 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-19 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

.emotion-19:hover,
.emotion-19:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-19:visited {
  color: #6E6E73;
}

.emotion-19 svg {
  margin: 0;
}

.emotion-21 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: inline-block;
  vertical-align: middle;
  padding-right: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-21 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-21 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-25 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
      <div
        class="emotion-14 emotion-15"
        data-e2e="index-alsos"
      >
        <h4
          class="emotion-16"
        >
          Related content
        </h4>
        <div
          class="emotion-17 emotion-18"
        >
          <a
            aria-labelledby="IndexAlsosLink-hausalabarai48916590"
            class="focusIndicatorDisplayInlineBlock emotion-19 emotion-20"
            href="/hausa/labarai-48916590"
          >
            <div
              aria-hidden="true"
              class="emotion-21 emotion-22"
              data-e2e="media-indicator"
              dir="ltr"
            >
              <div
                class="emotion-23 emotion-24"
              >
                <svg
                  aria-hidden="true"
                  class="emotion-25 emotion-26"
                  focusable="false"
                  height="12"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                  >
                    <path
                      d="M.5.6h12v12H.5z"
                    />
                    <path
                      d="M2.144.96v11.28l8.712-5.64z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
              </div>
            </div>
            <span
              id="IndexAlsosLink-hausalabarai48916590"
              role="text"
            >
              <span
                class="emotion-16"
              >
                video, 
              </span>
              <span>
                APC ba ta isa ta kore ni ba – Buba Galadima
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render Live promo correctly 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-0 {
      display: block;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-6 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  color: #006666;
  display: inline-block;
  vertical-align: -0.125rem;
  position: relative;
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  width: 0.9375rem;
  height: 0.9375rem;
}

@media (min-width: 25rem) {
  .emotion-12 {
    width: 1rem;
    height: 1rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-13 {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
  }
}

.emotion-14 {
  color: #006666;
  display: inline-block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-style: normal;
  font-weight: 700;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
}

.emotion-15 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-16 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-16 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          <svg
            aria-hidden="true"
            class="emotion-12"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 32 32"
            width="16"
          >
            <path
              d="M16 4c6.6 0 12 5.4 12 12s-5.4 12-12 12S4 22.6 4 16 9.4 4 16 4zm0-4C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0z"
            />
            <circle
              class="emotion-13"
              cx="16"
              cy="16"
              r="8.5"
            />
          </svg>
          <span
            role="text"
          >
            <span
              aria-hidden="true"
              class="emotion-14"
              dir="ltr"
            >
              LIVE
            </span>
            <span
              class="emotion-15"
              lang="en-GB"
            >
               Live, 
            </span>
            The live promo headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-16 emotion-17"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render a RTL Live promo correctly 1`] = `
@keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-0 {
      display: block;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-6 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  color: #006666;
  display: inline-block;
  vertical-align: -0.125rem;
  position: relative;
  -webkit-margin-end: 0.25rem;
  margin-inline-end: 0.25rem;
  width: 0.9375rem;
  height: 0.9375rem;
}

@media (min-width: 25rem) {
  .emotion-12 {
    width: 1rem;
    height: 1rem;
  }
}

@media (prefers-reduced-motion: no-preference) {
  .emotion-13 {
    -webkit-animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
    animation: animation-0 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.5s 3;
  }
}

.emotion-14 {
  color: #006666;
  display: inline-block;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-style: normal;
  font-weight: 700;
  -webkit-margin-end: 0.5rem;
  margin-inline-end: 0.5rem;
}

.emotion-15 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  clip: rect(1px, 1px, 1px, 1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.emotion-16 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-16 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-16 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-16 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          <svg
            aria-hidden="true"
            class="emotion-12"
            fill="currentColor"
            focusable="false"
            height="16"
            viewBox="0 0 32 32"
            width="16"
          >
            <path
              d="M16 4c6.6 0 12 5.4 12 12s-5.4 12-12 12S4 22.6 4 16 9.4 4 16 4zm0-4C7.2 0 0 7.2 0 16s7.2 16 16 16 16-7.2 16-16S24.8 0 16 0z"
            />
            <circle
              class="emotion-13"
              cx="16"
              cy="16"
              r="8.5"
            />
          </svg>
          <span
            role="text"
          >
            <span
              aria-hidden="true"
              class="emotion-14"
              dir="rtl"
            >
              مباشر
            </span>
            <span
              class="emotion-15"
              lang="en-GB"
            >
               Live, 
            </span>
            The live promo headline
          </span>
        </a>
      </h3>
      <p
        class="emotion-16 emotion-17"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-0 {
      display: block;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-4 {
  position: relative;
}

.emotion-6 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-6 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-6 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-6 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-6 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-8 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-10 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-10:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-10:visited {
  color: #6E6E73;
}

.emotion-12 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-12 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
      </div>
    </div>
    <div
      class="emotion-6 emotion-7"
      dir="ltr"
    >
      <h3
        class="emotion-8 emotion-9"
      >
        <a
          class="emotion-10 emotion-11"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-12 emotion-13"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render a RTL promo with media indicator correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-0 {
      display: block;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-4 {
  position: relative;
}

@media (min-width: 25rem) {
  .emotion-6 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-6>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-6>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-8 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-12 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-14 {
  padding: 0 0.25rem;
}

.emotion-16 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-16 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-16 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-16 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-18 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-20 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-20:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-20:hover,
.emotion-20:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20:visited {
  color: #6E6E73;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-22 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-22 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            aria-hidden="true"
            class="emotion-8 emotion-9"
            data-e2e="media-indicator"
            dir="rtl"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <svg
                aria-hidden="true"
                class="emotion-12 emotion-13"
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M.5.6h12v12H.5z"
                  />
                  <path
                    d="M2.144.96v11.28l8.712-5.64z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <time
                class="emotion-14 emotion-15"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-16 emotion-17"
      dir="ltr"
    >
      <h3
        class="emotion-18 emotion-19"
      >
        <a
          class="emotion-20 emotion-21"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-22 emotion-23"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;

exports[`StoryPromo with Media Indicator should render correctly 1`] = `
.emotion-0 {
  position: relative;
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-column-gap: 0.5rem;
  }

  @media (min-width: 37.5rem) {
    .emotion-0 {
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) {
    .emotion-0 {
      display: block;
    }
  }
}

.emotion-2 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

@media (min-width: 63rem) {
  .emotion-2 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-2 {
    width: initial;
    grid-column: 1/span 2;
  }
}

.emotion-4 {
  position: relative;
}

@media (min-width: 25rem) {
  .emotion-6 {
    position: absolute;
    bottom: 0;
  }
}

.emotion-6>* {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

@media (max-width: 24.9375rem) {
  .emotion-6>* {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

.emotion-8 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-8 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-12 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-14 {
  padding: 0 0.25rem;
}

.emotion-16 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

@media (min-width: 37.5rem) {
  .emotion-16 {
    padding: 0 1rem;
  }
}

@media (min-width: 63rem) {
  .emotion-16 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns: fit-content(200px)) {
  .emotion-16 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3/span 4;
  }

  @media (min-width: 63rem) {
    .emotion-16 {
      padding-top: 0.5rem;
    }
  }
}

.emotion-18 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-18 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

.emotion-20 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  display: inline-block;
}

.emotion-20:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.emotion-20:hover,
.emotion-20:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-20:visited {
  color: #6E6E73;
}

.emotion-22 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding-bottom: 0.5rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-22 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-22 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (max-width: 37.4375rem) {
  .emotion-22 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width: 63rem) {
  .emotion-22 {
    display: none;
    visibility: hidden;
  }
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
      dir="ltr"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <img
          alt="Alt text"
          src="https://foobar.com/image.png"
        />
        <div
          class="emotion-6 emotion-7"
        >
          <div
            aria-hidden="true"
            class="emotion-8 emotion-9"
            data-e2e="media-indicator"
            dir="ltr"
          >
            <div
              class="emotion-10 emotion-11"
            >
              <svg
                aria-hidden="true"
                class="emotion-12 emotion-13"
                focusable="false"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <path
                    d="M.5.6h12v12H.5z"
                  />
                  <path
                    d="M2.144.96v11.28l8.712-5.64z"
                    fill="currentColor"
                  />
                </g>
              </svg>
              <time
                class="emotion-14 emotion-15"
              >
                2:15
              </time>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-16 emotion-17"
      dir="ltr"
    >
      <h3
        class="emotion-18 emotion-19"
      >
        <a
          class="emotion-20 emotion-21"
          href="https://www.bbc.co.uk/news"
        >
          The headline of the promo
        </a>
      </h3>
      <p
        class="emotion-22 emotion-23"
      >
        The summary of the promo
      </p>
      <time>
        12 March 2019
      </time>
    </div>
  </div>
</div>
`;
